Bug 1464632 - Add the option to explicitly cache the internal results of nsContentUtils::ComparePoints since nsRange::IsNodeSelected calls it repeatedly with the same value and we don't want to pollute the internal caching of nsINode... r=mats

...::ComputeIndexOf. r?mats

MozReview-Commit-ID: HKFmy1QeCs6

Differential Revision: https://phabricator.services.mozilla.com/D10138

--HG--
extra : moz-landing-system : lando